--- a/config.toml
+++ b/config.toml
@@ -8,24 +8,24 @@ summarylength = 25
 [menu]
   # Navbar Menus
   [[menu.nav]]
-    name    = "Home"
+    name    = "Anasayfa"
     url     = ""
     weight  = 1
   [[menu.nav]]
-    name    = "About"
-    url     = "about"
+    name    = "Kurumsal"
+    url     = "kurumsal"
     weight  = 2
   [[menu.nav]]
-    name    = "Portfolio"
-    url     = "portfolio"
+    name    = "Ürünler"
+    url     = "urunler"
     weight  = 3
+  #[[menu.nav]]
+   # name    = "Blog"
+    #url     = "blog"
+    #weight  = 4
   [[menu.nav]]
-    name    = "Blog"
-    url     = "blog"
-    weight  = 4
-  [[menu.nav]]
-    name    = "Get in touch"
-    url     = "contact"
+    name    = "İletişim"
+    url     = "iletisim"
     weight  = 5
 
 # Site Params
@@ -38,30 +38,22 @@ summarylength = 25
   # Google Analitycs
   googleAnalitycsID = "Your ID"
   # We're using formspree.io for form handling, paste your formspree url below
-  fabform  = "https://fabform.io/f/USAg2Jl"
+  fabform  = "https://fabform.io/f/T-3OasE"
 
   # Contact Form
   [params.contactForm]
-    placeholder_first_name        = "First Name"
-    placeholder_last_name         = "Last Name"
-    placeholder_email             = "Email"
-    placeholder_project_type      = "Project Type"
-    placeholder_about_the_project = "About the Project"
-    send_message                  = "Send Message"
+    placeholder_first_name        = "Ad"
+    placeholder_last_name         = "Soyad"
+    placeholder_email             = "E-mail"
+    placeholder_telefon           = "Telefon"
+    placeholder_about_the_project = "Mesajınız"
+    send_message                  = "Gönder"
 
-    [[params.contactForm.projectType]]
-      value = "gd"
-      title  = "Graphics Design"
-    [[params.contactForm.projectType]]
-      value = "wd"
-      title  = "Web Design"
-  
   # Navbar Action Button
   [params.navAction]
     status  = true
     name    = "Get in touch"
     url     = "contact"
-  
 
   # Banner Section
   [params.banner]
