--- a/config.toml
+++ b/config.toml
@@ -11,10 +11,10 @@ summarylength = 25
     name    = "Anasayfa"
     url     = ""
     weight  = 1
-  [[menu.nav]]
-    name    = "Kurumsal"
-    url     = "kurumsal"
-    weight  = 2
+#  [[menu.nav]]
+#    name    = "Kurumsal"
+#    url     = "kurumsal"
+#    weight  = 2
   [[menu.nav]]
     name    = "Ürünler"
     url     = "urunler"
@@ -61,7 +61,7 @@ summarylength = 25
     heading               = "Ulus Etiket Matbaacılık ve Ambalaj"
     tagline               = ""
     primary_button        = "Ürünlerimiz"
-    primary_button_url    = "kurumsal"
+    primary_button_url    = "urunler"
     secondary_button      = "İletişim"
     secondary_button_url  = "iletisim"
 
@@ -82,41 +82,26 @@ summarylength = 25
   [params.footer]
     # Footer Contact Info
     [params.footer.contactInfo]
-      title   = "Contact Info"
-      address = "713 Elmwood St.<br>Prior Lake, MN 55372"
-      phone   = "409-896-1444"
-      email   = "info@roxo.co"
+      title   = "İletişim"
+      address = "Kışla Mah. 47. Sokak 7/A Muratpaşa / ANTALYA"
+      phone   = "0 544 242 79 35"
+      email   = "etiket@3ketiket.com"
       # Footer Sitemap
       [params.footer.sitemap]
-        title   = "Sitemap"
+        title   = "Sayfalar"
         [[params.footer.sitemap.link]]
-          name = "About Company"
-          url  = "about"
+          name = "Ürünler"
+          url  = "urunler"
         [[params.footer.sitemap.link]]
-          name = "Projects"
-          url  = "portfolio"
-        [[params.footer.sitemap.link]]
-          name = "Blog"
-          url  = "blog"
-        [[params.footer.sitemap.link]]
-          name = "Contact"
-          url  = "contact"
+          name = "İletişim"
+          url  = "iletisim"
       # Footer Social Media
       [params.footer.social]
         title   = "Social Media"
-        [[params.footer.social.link]]
-          name = "Medium"
-          url  = "#"
-        [[params.footer.social.link]]
-          name = "Behance"
-          url  = "#"
-        [[params.footer.social.link]]
-          name = "Dribbble"
-          url  = "#"
         [[params.footer.social.link]]
           name = "Instagram"
           url  = "#"
       # Footer Service
       [params.footer.service]
-        title       = "We help brands:"
-        description = "develop design solutions<br>produce valuable cultural content<br>create fresh brand experience"
+        title       = "Ulus Etiket Matbaacılık ve Ambalaj"
+        description = "Buraya açıklama ekleyelim"
