change base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL       = "https://abdulsametileri.github.io/hk-website/"
+baseURL       = "https://www.ulusetiket.com.tr"
 languageCode  = "tr"
 title         = "Ulus Etiket Matbaacılık ve Ambalaj - Antalya - Isparta - Burdur - Alanya"
 theme         = "roxo-hugo"
